--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,15 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/addNewPostFragment"
-        android:icon="@android:drawable/ic_input_add"
-        android:title="Add"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/aboutFragment"
-        android:icon="@drawable/ic_baseline_info_24"
-        android:title="User Profile"
-        app:showAsAction="always" />
-</menu>
+    xmlns:android="http://schemas.android.com/apk/res/android"/>
