--- a/app/src/main/res/menu/bar_menu.xml
+++ b/app/src/main/res/menu/bar_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/PostsListFragment"
-        android:icon="@android:drawable/btn_star"
-        android:title="List" />
+        android:id="@+id/postsListFragment"
+        android:icon="@drawable/ic_baseline_home_24"
+        android:title="Home" />
     <item
         android:id="@+id/addNewPostFragment"
         android:icon="@android:drawable/ic_input_add"
