--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,7 +17,7 @@
     <fragment
         android:id="@+id/postFragment"
         android:name="com.example.karenhub.PostFragment"
-        android:label=" Post"
+        android:label=" Post info"
         tools:layout="@layout/fragment_post">
         <argument
             android:name="postTitle"
