user profile and some design changes

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background2"
+    android:background="@drawable/login_background3"
     tools:context=".LogInActivity">
 
     <TextView
@@ -67,7 +67,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundstyle"
-                android:backgroundTint="#DFDFDF"
+                android:backgroundTint="#CBDFDFDF"
                 android:hint="@string/prompt_email" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -81,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundstyle"
-                android:backgroundTint="#DFDFDF"
+                android:backgroundTint="#CBDFDFDF"
                 android:cursorVisible="true"
                 android:inputType="textPassword"
                 android:hint="@string/prompt_password" />
