--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background2"
+    android:background="@drawable/login_background3"
     tools:context=".SignUpActivity">
 
     <TextView
@@ -66,7 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundstyle"
-                android:backgroundTint="#DFDFDF"
+                android:backgroundTint="#CBDFDFDF"
                 android:hint="@string/prompt_email" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -80,7 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundstyle"
-                android:backgroundTint="#DFDFDF"
+                android:backgroundTint="#CBDFDFDF"
                 android:hint="@string/prompt_AccLabel" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -94,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundstyle"
-                android:backgroundTint="#DFDFDF"
+                android:backgroundTint="#CBDFDFDF"
                 android:cursorVisible="true"
                 android:hint="@string/prompt_password"
                 android:inputType="textPassword" />
