update postlist fix

--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -108,49 +108,50 @@
                     android:textColor="#666666" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/linearLayoutCompat"
+            <View
+                android:id="@+id/seperation"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="3dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/roundstyle"
+                android:backgroundTint="#404040" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/addLocation_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="8dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
                     android:layout_marginBottom="20dp"
-                    android:text="add location"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/saveBtn"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:text="add location" />
 
                 <Button
                     android:id="@+id/saveBtn"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:text="SAVE"
-                    app:layout_constraintBottom_toBottomOf="@+id/addLocation_btn"
-                    app:layout_constraintEnd_toStartOf="@+id/cancellBtn"
-                    app:layout_constraintStart_toEndOf="@+id/addLocation_btn"
-                    app:layout_constraintTop_toTopOf="@+id/addLocation_btn" />
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_marginBottom="20dp"
+                    android:text="SAVE" />
 
                 <Button
-                    android:id="@+id/cancellBtn"
+                    android:id="@+id/cancelBtn"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
+                    android:layout_height="match_parent"
                     android:layout_marginEnd="8dp"
-                    android:text="CANCEL"
-                    app:layout_constraintBottom_toBottomOf="@+id/saveBtn"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/saveBtn"
-                    app:layout_constraintTop_toTopOf="@+id/saveBtn" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_marginBottom="20dp"
+                    android:text="CANCEL" />
+            </LinearLayout>
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
