--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -73,7 +73,7 @@
     <fragment
         android:id="@+id/editPostFragment"
         android:name="com.example.karenhub.EditPostFragment"
-        android:label="fragment_edit_post"
+        android:label="Edit Post"
         tools:layout="@layout/fragment_edit_post" >
         <action
             android:id="@+id/action_editPostFragment_to_mapsFragment"
@@ -82,7 +82,7 @@
             android:name="location"
             app:argType="com.google.android.gms.maps.model.LatLng" />
         <argument
-            android:name="loactionName"
+            android:name="locationName"
             app:argType="string" />
         <argument
             android:name="postId"
