--- a/app/src/main/res/layout/fragment_edit_post.xml
+++ b/app/src/main/res/layout/fragment_edit_post.xml
@@ -25,16 +25,15 @@
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp">
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:id="@+id/avatarImg_editPost"
                         android:layout_width="match_parent"
                         android:layout_height="238dp"
-                        android:layout_marginTop="8dp"
-                        android:scaleType="fitCenter"
-                        app:srcCompat="@drawable/avatar"
+                        android:layout_marginTop="28dp"
+                        android:scaleType="centerCrop"
+                        app:srcCompat="@drawable/noimage"
                         tools:src="@tools:sample/backgrounds/scenic[0]" />
 
                     <ImageButton
