--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -32,9 +32,9 @@
                     android:id="@+id/avatarImg"
                     android:layout_width="match_parent"
                     android:layout_height="238dp"
-                    android:layout_marginTop="8dp"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/avatar"
+                    android:layout_marginTop="28dp"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/noimage"
                     tools:src="@tools:sample/backgrounds/scenic[0]" />
 
                 <ImageButton
